# kessler

./: .gitignore  Cargo.toml  PERFORMANCE_ROADMAP.md  PROJECT_STATUS.md  README.md  architecture.md
assets/shaders/: orbital_physics.wgsl
src/: main.rs
src/components/: objects.rs  orbital.rs
src/resources/: simulation.rs
src/systems/: analytics.rs  collision.rs  data.rs  mod.rs  optimized_physics.rs  physics.rs  rendering.rs  stress_test.rs
src/utils/: sgp4_wrapper.rs  tle_parser.rs
