[package]
name = "kessler-simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kessler"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_render", "bevy_core_pipeline"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
sgp4 = "2.0"
rand = "0.8"
bytemuck = { version = "1.0", features = ["derive"] }
rayon = "1.7"
futures-lite = "1.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3